--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/redux-thunk": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.3.4",
     "react-redux": "^8.0.7",
+    "react-resizable": "^3.0.5",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
@@ -46,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-grid-layout": "^1.3.2"
   }
 }
